--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -1,3 +1,5 @@
-<div class="pt-5">
-    <div id="okta-signin" class="pt-5"></div>
-</div>
+<html>
+    <body>
+        <div id="okta-signin"></div>
+    </body>
+</html>
