--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,4 +1,4 @@
 <app-nav></app-nav>
-<div class="p-5 m-3 bg-light rounded">
-    <h1>Welcome, {{username}}!</h1>
+<div class="p-5 m-3" style="text-align: center;">
+    <img src="../../assets/nttBlueprint.png" alt="" width="720" height="480">
 </div>
