--- a/src/app/nav/nav.component.html
+++ b/src/app/nav/nav.component.html
@@ -1,23 +1,23 @@
-<nav class="navbar navbar-expand-lg bg-light">
+<nav class="navbar navbar-expand-lg" style="background-color: #ebebed;">
     <div class="container">
-      <a class="navbar-brand" routerLink="/home">NTT Data</a>
+      <a class="navbar-brand" routerLink="/home"><img src="../../assets/nttLogo.png" alt=""></a>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
       <div class="collapse navbar-collapse" id="navbarSupportedContent">
-        <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-          <li class="nav-item">
-            <a *ngIf="isAuthenticated" class="nav-link active" aria-current="page" routerLink="/home">Home</a>
-          </li>
-        </ul>
-        <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
-          <li class="nav-item">
-            <a *ngIf="!isAuthenticated" class="nav-link active" aria-current="page" routerLink="/login">Login</a>
-          </li>
-          <li class="nav-item">
-            <a role="button" *ngIf="isAuthenticated" (click)="logout()" class="nav-link active" aria-current="page">Logout</a>
-          </li>
-        </ul>
       </div>
+      <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
+        <li class="nav-item dropdown">
+          <a class="nav-link dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" data-target="#" aria-expanded="false" role="button">
+            <img class="border border-dark rounded-circle" src="../../assets/erling.webp" height="60" width="60">
+          </a>
+          <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+            <a class="dropdown-item" href="https://myaccount.microsoft.com/?ref=MeControl">My Profile</a>
+            <div class="dropdown-divider"></div>
+            <a class="dropdown-item" role="button" *ngIf="isAuthenticated" (click)="logout()" aria-current="page">Logout</a>
+            <a class="dropdown-item" *ngIf="!isAuthenticated" aria-current="page" routerLink="/login">Login</a>
+          </div>
+        </li>
+      </ul>
     </div>
   </nav>
