--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,4 +1,6 @@
 <app-nav></app-nav>
-<div class="p-5 m-3" style="text-align: center;">
-    <img src="../../assets/nttBlueprint.png" alt="" width="720" height="480">
+<div class="mainPage">
+    <div class="p-5 m-3" style="text-align: center;">
+        <h1>Welcome, {{username}}!</h1>
+    </div>
 </div>
