--- a/src/app/apparel/apparel.component.html
+++ b/src/app/apparel/apparel.component.html
@@ -1,25 +1,30 @@
 <app-nav></app-nav>
 <div class="mainPage">
-    <div class="p-5 m-3" style="text-align: center;">
+    <div class="p-5 m-1" style="text-align: center;">
         <div *ngIf="apparelString === ''" class="container">
-            <img src="https://www.jpaulstore.com/nttdata/images/Apparel%20Categories%202.png">
             <div class="row">
-                <div class="col-sm">
-                    1/3 Column
+                <div class="col-sm" ng-app="app-apparel" ng-controller="menCtrl">
+                    <img type="button" class="border border-secondary rounded bg-light" (click)="onSelectMen()" src="../../assets/imageRoutes/maApp-removebg-preview.png" style="height:350px;width:200px;">
                 </div>
                 <div class="col-sm">
-                    2/3 Column
+                    <img type="button" class="border border-secondary rounded bg-light" (click)="onSelectWomen()" src="../../assets/imageRoutes/fmApp-removebg-preview.png" style="height:350px;width:200px;">
                 </div>
                 <div class="col-sm">
-                    3/3 Column
+                    <img type="button" class="border border-secondary rounded" (click)="onSelectPride()" src="../../assets/imageRoutes/nttPride.jfif" style="height:350px;width:200px;">
                 </div>
             </div>
         </div>
         <div *ngIf="apparelString === 'male'" class="container">
-            <p>Men's Apparel</p>
+            <h1>Men's Apparel</h1>
+            <button (click)="onSelectMain()">Back</button>
         </div>
         <div *ngIf="apparelString === 'female'" class="container">
-            <p>Women's Apparel</p>
+            <h1>Women's Apparel</h1>
+            <button (click)="onSelectMain()">Back</button>
+        </div>
+        <div *ngIf="apparelString === 'pride'" class="container">
+            <h1>Pride Apparel</h1>
+            <button (click)="onSelectMain()">Back</button>
         </div>
     </div>
 </div>
