--- a/src/app/nav/nav.component.html
+++ b/src/app/nav/nav.component.html
@@ -1,4 +1,4 @@
-<nav class="navbar navbar-expand-lg" style="background-color: #617fb7;">
+<nav class="navbar navbar-expand-lg" style="background-color: #617fb7;position: sticky;top: 0px;">
   <div class="container">
     <a class="navbar-brand" routerLink="/home"><img src="../../assets/logos/nttLogoBlue.PNG" alt="" style="width:255px;height:55px"></a>
      <div class="collapse navbar-collapse" id="navbarSupportedContent">
@@ -10,24 +10,27 @@
           <a class="nav-link" routerLink="/accessory" style="font-weight:600;">Accessories</a>
         </li>
         <li class="navbar-item active">
-          <a class="nav-link" routerLink="/home" style="font-weight:600;">Promos</a>
+          <a class="nav-link" routerLink="/promo" style="font-weight:600;">Promos</a>
         </li>
         <li class="navbar-item active">
-          <a class="nav-link" routerLink="/home" style="font-weight:600;">On Sale</a>
+          <a class="nav-link" routerLink="/sale" style="font-weight:600;">On Sale</a>
         </li>
        </ul>
        <ul class="navbar-nav ms-auto">
         <li class="navbar-item active">
-          <a class="nav-link" title="View Cart" routerLink="/home"><img src="../../assets/logos/cart.png" alt="View Cart" style="width:35px;height:35px;opacity:.75;"></a>
+          <a class="nav-link" routerLink="/cart"><p style="font-size:10px;text-align:center;line-height:0;"><b>View Cart</b></p><img src="../../assets/logos/cart.png" style="width:40px;height:40px;"></a>
         </li>
         <li class="navbar-item active">
-          <a class="nav-link" title="Order History" routerLink="/home"><img src="../../assets/logos/orderHistory.png" alt="Order History" style="width:35px;height:35px;opacity:.75;"></a>
+          <a class="nav-link" routerLink="/orders"><p style="font-size:10px;text-align:center;line-height:0;"><b>Orders</b></p><img src="../../assets/logos/orderHistory.png" style="width:40px;height:40px;"></a>
+        </li>
+        <li class="navbar-item active">
+          <a class="nav-link" routerLink="/policy"><p style="font-size:10px;text-align:center;line-height:0;"><b>Policy</b></p><img src="../../assets/logos/info.png" style="width:40px;height:40px;"></a>
         </li>
        </ul>
      </div>
-     <ul class="navbar-nav ms-auto">
+     <ul class="navbar-item ms-auto" style="list-style-type: none;">
        <li class="nav-item dropdown">
-         <a class="nav-link dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" data-target="#" aria-expanded="false" role="button">
+         <a class="nav-link dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" data-target="#" aria-expanded="false" role="button" style="padding-top: 15px;">
            <img class="border border-dark rounded-circle" src="../../assets/logos/erling.webp" alt="Profile" style="width:60px;height:60px;">
          </a>
          <div class="dropdown-menu" aria-labelledby="navbarDropdown">
