--- a/src/app/promo/promo.component.html
+++ b/src/app/promo/promo.component.html
@@ -1,6 +1,6 @@
 <div class="mainPage">
     <app-nav></app-nav>
     <div class="p-3 m-0" style="text-align: center;">
-        <h1>Welcome, {{username}}!</h1>
+        <h1>Promos</h1>
     </div>
 </div>
