--- a/src/app/accessory/accessory.component.html
+++ b/src/app/accessory/accessory.component.html
@@ -7,13 +7,13 @@
                 <div class="col-sm" ng-app="app-apparel">
                     <p>Swag</p>
                     <div class="hovShadow rounded">
-                        <img type="button" class="border border-secondary rounded bg-light" (click)="onSelectSwag()" src="../../assets/imageRoutes/swag.png" style="height:300px;width:325px;">
+                        <img type="button" class="border border-secondary rounded" (click)="onSelectSwag()" src="../../assets/imageRoutes/swag.png" style="height:300px;width:325px;background-color:rgb(228, 212, 158);">
                     </div>
                 </div>
                 <div class="col-sm">
                     <p>Bags</p>
                     <div class="hovShadow rounded">
-                        <img type="button" class="border border-secondary rounded bg-light" (click)="onSelectBags()" src="../../assets/imageRoutes/bag.png" style="height:300px;width:325px;">
+                        <img type="button" class="border border-secondary rounded" (click)="onSelectBags()" src="../../assets/imageRoutes/bag.png" style="height:300px;width:325px;background-color:rgb(156, 228, 232);">
                     </div>
                 </div>
             </div>
