--- a/src/app/apparel/apparel.component.html
+++ b/src/app/apparel/apparel.component.html
@@ -7,13 +7,13 @@
                 <div class="col-sm" ng-app="app-apparel">
                     <p>Men's</p>
                     <div class="hovShadow rounded">
-                        <img type="button" class="border border-secondary rounded bg-light" (click)="onSelectMen()" src="../../assets/imageRoutes/maApp.png" style="height:350px;width:200px;">
+                        <img type="button" class="border border-secondary rounded" (click)="onSelectMen()" src="../../assets/imageRoutes/maApp.png" style="height:350px;width:200px;background-color:rgb(165, 227, 146);">
                     </div>
                 </div>
                 <div class="col-sm">
                     <p>Women's</p>
                     <div class="hovShadow rounded">
-                        <img type="button" class="border border-secondary rounded bg-light" (click)="onSelectWomen()" src="../../assets/imageRoutes/fmApp.png" style="height:350px;width:200px;">
+                        <img type="button" class="border border-secondary rounded" (click)="onSelectWomen()" src="../../assets/imageRoutes/fmApp.png" style="height:350px;width:200px;background-color: rgb(196, 135, 231);">
                     </div>
                 </div>
                 <div class="col-sm">
