--- a/src/app/policy/policy.component.html
+++ b/src/app/policy/policy.component.html
@@ -1,6 +1,19 @@
 <div class="mainPage">
     <app-nav></app-nav>
     <div class="p-3 m-0" style="text-align: center;">
-        <h1>Policies</h1>
+        <h1>FAQ</h1>
+        <br>
+        <div style="text-align:left;">
+            <p><b>What payment methods are available?</b></p>
+            <p>All major credit cards (Visa, Master Card, American Express & Discover) are accepted and securely processed.</p>
+            <p><b>How and when will I receive my purchase?</b></p>
+            <p>All items are produced within 5-7 business days after the proof is approved prior to shipping.</p>
+            <p><b>Will I receive confirmation of my online order?</b></p>
+            <p>Yes, you will receive an e-mail verification of your order.</p>
+            <p><b>How often is this website updated with new products?</b></p>
+            <p>Expect seasonal updates from which to choose new products from.</p>
+            <p><b>What is your return policy?</b></p>
+            <p>All items can be returned within 30 days without having been washed or worn. Shipping & Handling Charges will apply.</p>
+        </div>
     </div>
 </div>
