--- a/src/app/accessory/accessory.component.scss
+++ b/src/app/accessory/accessory.component.scss
@@ -1,10 +1,16 @@
 .hovShadow {
     transition: box-shadow .3s;
-    height:300px;
-    width:325px;
+    height:350px;
+    width:200px;
     margin-left: 25%;
 }
 
 .hovShadow:hover {
     box-shadow: 0 0 15px rgba(0, 0, 0, 0.25);
+}
+
+.card-img-top {
+    width: 100%;
+    height: 21vw;
+    object-fit: cover;
 }
