--- a/src/app/nav/nav.component.html
+++ b/src/app/nav/nav.component.html
@@ -1,4 +1,4 @@
-<nav class="navbar navbar-expand-lg" style="background-color: #617fb7;position: sticky;top: 0px;">
+<nav class="navbar navbar-expand-lg" style="background-color: #617fb7;top: 0px;">
   <div class="container">
     <a class="navbar-brand" routerLink="/home"><img src="../../assets/logos/nttLogoBlue.PNG" alt="" style="width:255px;height:55px"></a>
      <div class="collapse navbar-collapse" id="navbarSupportedContent">
