--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,9 +1,21 @@
 .mainPage {
     background-color: #ebebed;
-    position: absolute;
     width: 100%;
     height: 100%;
+    position: absolute;
+    margin-left: auto;
+    margin-right: auto;
+    overflow: scroll;
 }
+
+html, body {
+    height: 100%;
+}
+
+body {
+    background: #ebebed;
+}
+
 /* Importing Bootstrap SCSS file. */
 @import '~bootstrap/scss/bootstrap';
 
