Cart Done and Checkout Started

--- a/src/app/accessory/accessory.component.html
+++ b/src/app/accessory/accessory.component.html
@@ -4,7 +4,7 @@
     <div class="p-3 m-0" style="text-align: center;">
         <div class="container">
             <h1>Accessories</h1>
-            <h5>Filters:</h5>
+            <!--<h5>Filters:</h5>-->
             <div class="p-3 m-0" style="text-align: center;">
                 <div class="row justify-content-center">
                     <div *ngFor="let entry of products" class="card col-sm-3 m-0">
@@ -12,7 +12,7 @@
                         <div class="card-body">
                             <h5 class="card-title">{{entry.title}}</h5>
                             <p class="card-text">{{entry.price}}</p>
-                            <a class="btn btn-primary" style="background-color: #617fb7; color: white;border: none;">
+                            <a class="btn btn-primary" style="background-color: #617fb7; color: white;border: none;" (click)="addToCart(entry)">
                                 Add To Cart
                             </a>
                         </div>
