--- a/src/app/apparel/apparel.component.html
+++ b/src/app/apparel/apparel.component.html
@@ -35,7 +35,7 @@
                         <div class="card-body">
                             <h5 class="card-title">{{entry.title}}</h5>
                             <p class="card-text">{{entry.price}}</p>
-                            <a class="btn btn-primary" style="background-color: #617fb7; color: white;border: none;">
+                            <a class="btn btn-primary" style="background-color: #617fb7; color: white;border: none;" (click)="addToCart(entry)">
                                 Add To Cart
                             </a>
                         </div>
@@ -53,7 +53,7 @@
                         <div class="card-body">
                             <h5 class="card-title">{{entry.title}}</h5>
                             <p class="card-text">{{entry.price}}</p>
-                            <a class="btn btn-primary" style="background-color: #617fb7; color: white;border: none;">
+                            <a class="btn btn-primary" style="background-color: #617fb7; color: white;border: none;" (click)="addToCart(entry)">
                                 Add To Cart
                             </a>
                         </div>
@@ -71,7 +71,7 @@
                         <div class="card-body">
                             <h5 class="card-title">{{entry.title}}</h5>
                             <p class="card-text">{{entry.price}}</p>
-                            <a class="btn btn-primary" style="background-color: #617fb7; color: white;border: none;">
+                            <a class="btn btn-primary" style="background-color: #617fb7; color: white;border: none;" (click)="addToCart(entry)">
                                 Add To Cart
                             </a>
                         </div>
