--- a/src/app/cart/cart.component.html
+++ b/src/app/cart/cart.component.html
@@ -1,6 +1,48 @@
+<body>
 <div class="mainPage">
     <app-nav></app-nav>
-    <div class="p-3 m-0" style="text-align: center;">
-        <h1>Cart</h1>
-    </div>
+    <ng-container *ngIf="emptyCart">
+        <div class="card">
+            <h2 class="card-title" style="font-weight: 500;">My Cart</h2>
+        </div>
+        <div class="center">
+            <img src="../../assets/logos/nttLogo.png" alt="">
+            <h4>Your cart is empty.</h4>
+            <a class="btn" style="background-color: #ebebed;" routerLink="/home">Shop Now</a>
+        </div>
+    </ng-container>
+    <ng-container *ngIf="!emptyCart">
+        <div class="card-table">
+            <div class="cart-product">
+                <table class="table table-responsive">
+                    <thead>
+                        <tr>
+                            <th>Product Image</th>
+                            <th>Product Name</th>
+                            <th>Price</th>
+                            <th>Option</th>
+                        </tr>
+                    </thead>
+                    <tbody>
+                        <tr *ngFor="let entry of product">
+                            <td><img src="{{entry.image}}" style="height: 100px;width: 100px;"></td>
+                            <td>{{entry.title}}</td>
+                            <td>{{entry.price}}</td>
+                            <td>
+                                <button (click)="removeItem(entry)" class="btn btn-danger"><img src="../../assets/logos/trash.webp" style="height:20px;width:20px;"></button>
+                            </td>
+                        </tr>
+                    </tbody>
+                </table>
+            </div>
+        </div>
+        <div class="row m-0">
+            <div class="col-6"></div>
+            <button class="col-sm m-2 btn btn-danger" (click)="clearCart()">Clear Cart</button>
+            <button class="col-sm m-2 btn btn-info" routerLink="/home">Shop More</button>
+            <button class="col-sm m-2 btn btn-success" routerLink="/checkout">Checkout</button>
+            <div class="col-sm m-2" style="text-align: center;"><strong>Grand Total: ${{grandTotal}}</strong></div>
+        </div>
+    </ng-container>
 </div>
+</body>
