Wrapping up Home and Nav; Styled Cards

--- a/src/app/accessory/accessory.component.scss
+++ b/src/app/accessory/accessory.component.scss
@@ -9,8 +9,10 @@
     box-shadow: 0 0 15px rgba(0, 0, 0, 0.25);
 }
 
-.card-img-top {
-    width: 100%;
-    height: 21vw;
-    object-fit: cover;
+.addShadow {
+    transition: box-shadow .3s;
+}
+
+.addShadow:hover {
+    box-shadow: 0 0 8px rgba(0, 0, 0, 0.45);
 }
