--- a/src/app/apparel/apparel.component.html
+++ b/src/app/apparel/apparel.component.html
@@ -30,12 +30,12 @@
             <button (click)="onSelectMain()">Back</button>
             <div class="p-3 m-0" style="text-align: center;">
                 <div class="row justify-content-center">
-                    <div *ngFor="let entry of products" class="card col-sm-3 m-0">
+                    <div *ngFor="let entry of products" class="card col-sm-2 m-2">
                         <img class="card-img-top" src="{{entry.image}}" alt="{{entry.title}}">
                         <div class="card-body">
                             <h5 class="card-title">{{entry.title}}</h5>
                             <p class="card-text">{{entry.price}}</p>
-                            <a class="btn btn-primary" style="background-color: #617fb7; color: white;border: none;" (click)="addToCart(entry)">
+                            <a class="btn btn-primary addShadow rounded" style="background-color: #617fb7; color: white;border: none;" (click)="addToCart(entry)">
                                 Add To Cart
                             </a>
                         </div>
@@ -48,12 +48,12 @@
             <button (click)="onSelectMain()">Back</button>
             <div class="p-3 m-0" style="text-align: center;">
                 <div class="row justify-content-center">
-                    <div *ngFor="let entry of products" class="card col-sm-3 m-0">
+                    <div *ngFor="let entry of products" class="card col-sm-2 m-2">
                         <img class="card-img-top" src="{{entry.image}}" alt="{{entry.title}}">
                         <div class="card-body">
                             <h5 class="card-title">{{entry.title}}</h5>
                             <p class="card-text">{{entry.price}}</p>
-                            <a class="btn btn-primary" style="background-color: #617fb7; color: white;border: none;" (click)="addToCart(entry)">
+                            <a class="btn btn-primary addShadow rounded" style="background-color: #617fb7; color: white;border: none;" (click)="addToCart(entry)">
                                 Add To Cart
                             </a>
                         </div>
@@ -66,12 +66,12 @@
             <button (click)="onSelectMain()">Back</button>
             <div class="p-3 m-0" style="text-align: center;">
                 <div class="row justify-content-center">
-                    <div *ngFor="let entry of products" class="card col-sm-3 m-0">
+                    <div *ngFor="let entry of products" class="card col-sm-2 m-2">
                         <img class="card-img-top" src="{{entry.image}}" alt="{{entry.title}}">
                         <div class="card-body">
                             <h5 class="card-title">{{entry.title}}</h5>
                             <p class="card-text">{{entry.price}}</p>
-                            <a class="btn btn-primary" style="background-color: #617fb7; color: white;border: none;" (click)="addToCart(entry)">
+                            <a class="btn btn-primary addShadow rounded" style="background-color: #617fb7; color: white;border: none;" (click)="addToCart(entry)">
                                 Add To Cart
                             </a>
                         </div>
