--- a/src/app/accessory/accessory.component.html
+++ b/src/app/accessory/accessory.component.html
@@ -4,15 +4,24 @@
     <div class="p-3 m-0" style="text-align: center;">
         <div class="container">
             <h1>Accessories</h1>
-            <!--<h5>Filters:</h5>-->
+            <div>
+                <h3>Filters:</h3>
+                <mat-checkbox >Bags</mat-checkbox>
+                <mat-checkbox style="margin-left: 20px;">INDYCAR</mat-checkbox>
+                <mat-checkbox style="margin-left: 20px;">Lanyards</mat-checkbox>
+                <mat-checkbox style="margin-left: 20px;">Mugs</mat-checkbox>
+                <mat-checkbox style="margin-left: 20px;">Office Supplies</mat-checkbox>
+                <mat-checkbox style="margin-left: 20px;">Recreational</mat-checkbox>
+                <mat-checkbox style="margin-left: 20px;">Tech</mat-checkbox>
+            </div>
             <div class="p-3 m-0" style="text-align: center;">
                 <div class="row justify-content-center">
-                    <div *ngFor="let entry of products" class="card col-sm-3 m-0">
+                    <div *ngFor="let entry of products" class="card col-sm-2 m-2">
                         <img class="card-img-top" src="{{entry.image}}" alt="{{entry.title}}">
                         <div class="card-body">
                             <h5 class="card-title">{{entry.title}}</h5>
                             <p class="card-text">{{entry.price}}</p>
-                            <a class="btn btn-primary" style="background-color: #617fb7; color: white;border: none;" (click)="addToCart(entry)">
+                            <a class="btn btn-primary addShadow rounded" style="background-color: #617fb7; color: white;border: none;" (click)="addToCart(entry)">
                                 Add To Cart
                             </a>
                         </div>
