--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,17 +1,17 @@
 <div class="mainPage">
     <app-nav></app-nav>
-    <div class="p-3 m-0" style="text-align: center;">
-        <h1>Welcome, {{username}}!</h1>
+    <div class="p-3 m-0">
+        <h1 style="text-align: center;">Welcome, {{username}}!</h1>
         <br><br>
-        <h2>Popular Items</h2>
-        <div class="p-3 m-0" style="text-align: center;">
+        <h2 style="margin-left: 5%;">Popular Items</h2>
+        <div class="p-0 m-0" style="text-align: center;">
             <div class="row justify-content-center">
-                <div *ngFor="let entry of products" class="card col-sm-3 m-0">
+                <div *ngFor="let entry of products" class="card col-sm-2 m-2">
                     <img class="card-img-top" src="{{entry.image}}" alt="{{entry.title}}">
                     <div class="card-body">
                         <h5 class="card-title">{{entry.title}}</h5>
                         <p class="card-text">{{entry.price}}</p>
-                        <a class="btn btn-primary" style="background-color: #617fb7; color: white;border: none;" (click)="addToCart(entry)">
+                        <a class="btn btn-primary addShadow rounded" style="background-color: #617fb7; color: white;border: none;" (click)="addToCart(entry)">
                             Add To Cart
                         </a>
                     </div>
